--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,667],[],[[4,0,1,0,[],[1,455,120],[]],[5,0,1,0,[],[1,576,12],[]],[6,0,1,0,[],[1,589,22],[]],[7,0,1,0,[],[1,611,25],[]],[8,0,1,0,[],[1,637,29],[]]],[],[5,5,5,5]];
+window.output["suite"] = [1,2,3,0,[],[1,0,555],[],[[4,0,1,0,[],[1,404,87],[]],[5,0,1,0,[],[1,491,8],[]],[6,0,1,0,[],[1,499,12],[]],[7,0,1,0,[],[1,511,23],[]],[8,0,1,0,[],[1,535,19],[]]],[],[5,5,5,5]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*test.REST","*/Users/phong.t/Downloads/goworkspace/src/github.com/phongcao0114/pmhb-book-service-test/test.REST.robot","*test.REST.robot","*Insert Book - Missing Name","*Insert Book - Missing Author","*Insert Book - Success","*Get Book - Success","*Delete Book - Success"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Book-Service-Test","*/Users/phong.t/Downloads/goworkspace/src/github.com/phongcao0114/pmhb-book-service-test/book-service-test.robot","*book-service-test.robot","*Insert Book - Missing Name","*Insert Book - Missing Author","*Insert Book - Success","*Get Book - Success","*Delete Book - Success"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":5},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5}],[],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"test.REST","name":"test.REST","pass":5}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":5},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5}],[],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"Book-Service-Test","name":"Book-Service-Test","pass":5}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1602814757910;
+window.output["baseMillis"] = 1602816278951;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 713;
+window.output["generated"] = 568;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
